fix scroll on x and y on mobile

--- a/css/business_card.css
+++ b/css/business_card.css
@@ -8,8 +8,8 @@ body {
     background: var(--blue-900);
     color: var(--blue-100);
     font-size: 16px;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     overflow: hidden;
 }
 
